# ldtk_map

./: .gitignore  Cargo.toml  README.md  maps
.github/workflows/: test.yaml
examples/: starting.rs
src/: design_map.rs  ldtk_helpers.rs  ldtk_structs.rs  lib.rs
tests/testmaps/: bad_names.ldtk  different_level_sizes.ldtk  empty_world.ldtk  entities.ldtk  two_tileatlases.ldtk
