[package]
name = "ldtk_map"
version = "0.3.1"
edition = "2021"
description = "A crate for reading ldtk maps for usage in games."
authors = ["Benjamin Lloyd"]
readme = "./README.md"
keywords = ["ldtk", "level-design", "json", "gamedev"]
categories = ["data-structures", "game-development", "parser-implementations"]
license = "MIT"
repository = "https://github.com/benlloyd50/ldtk_map/"
exclude = [
    "tests/",
    "maps",
]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
